kubernetes/pod-template2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: node1
  name: node1
spec:
  containers:
  - image: node
    name: node1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
