kubernetes/pod123.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod123
  labels:
    name: pod123
spec:
  containers:
  - name: pod123
    image: nginx
